1.1.1 to 1.1.2
----------------------------------------------------------------------
- Changed the count for notifications to reflect just those for the
  user logged in.
- Added security roles to web.xml. Bug 715. Thx DJ
- Corrected issues with last day/week/month/year buttons in webUI.
- Added check to handle null terminated strings in traps. Thx Dave W.

1.1.0 to 1.1.1
----------------------------------------------------------------------
- Fixed a small bug with RRAs. Bug 707. Thx Volker
- Slightly improved the output of mib2opennms. Thx John and Rick
- Added trap definitions for Dell OpenManage.
- Added trap definitions for Foundry Networks. Thx Bill W.
- Added trap definitions for ADIC devices. Thx Robert M.
- Added Key SNMP Custom (KSC) Performance report builder, under 
  the Reports section of the GUI. Thx Dave M.
- fixed JNI calling on MacOSX 10.2 (jnilibs now build as 2-level
  namespace)
- updated logging to log4j 1.2.7
- fixed install.pl to consider type "6" as unicode as well (fixes
  unicode check on postgresql 7.3+)
- Added a two minute refresh to the Events list page. Thx Chris Y.
- Added an event cache to fix the problem where "up" events
  are recorded before "down" events. Bug 650
- Disallowed Null Search Text. Bug 536
- Added last day/week/month/year buttons to Performance and
  Response Time report pages. Bugs 546 and 618
- Corrected some SQL syntax in the Outage WebUI. Bug 681
- Increased the size of the contactinfo field in the usersnotified
  table from 32 to 64 characters. Bug 671
- Added an HTTP button for nodes and interfaces with the HTTP
  service. Bug 469
- Added Response Time links to node and interface pages. Bug 684
- Added an "order by" to a notifications SQL statement. Bug 648
- Added the option to define "match-any" as the IP address in 
  the poll-outages calendar.
- Added the ability to define RRAs for response time data per
  poller package. Bug 680
- Fixed a style sheet issue in the WebUI. Bug 568