@@ -60,7 +60,13 @@
 				<mibObj oid=".1.3.6.1.4.1.9.2.1.8"  instance="0" alias="freeMem"     type="gauge"/>
 				<mibObj oid=".1.3.6.1.4.1.9.2.1.46" instance="0" alias="bufferFail"  type="counter"/>
 				<mibObj oid=".1.3.6.1.4.1.9.2.1.47" instance="0" alias="bufferNoMem" type="counter"/>
+                                <mibObj oid=".1.3.6.1.4.1.9.9.13.1.3.1.3" instance="1" alias="ciscoInFanTemp" type="gauge"/>
+                                <mibObj oid=".1.3.6.1.4.1.9.9.13.1.3.1.3" instance="3" alias="ciscoOutFanTemp" type="gauge"/>
 			</group>
+                        <group  name = "cisco-router-if-stats" ifType = "all">
+                                <mibObj oid=".1.3.6.1.4.1.9.2.2.1.1.7" instance="ifIndex" alias="locIfInPktsSec" type="integer"/>
+                                <mibObj oid=".1.3.6.1.4.1.9.2.2.1.1.9" instance="ifIndex" alias="locIfOutPktsSec" type="integer"/>
+                        </group>
 			<group 	name = "bay-router" ifType = "ignore">
 				<mibObj oid=".1.3.6.1.4.1.18.3.3.2.5.1.1.9"  instance="0" alias="wfkernelTasksTotal"  type="gauge"/>
 				<mibObj oid=".1.3.6.1.4.1.18.3.3.2.5.1.1.10" instance="0" alias="wfkernelTasksInQue"  type="counter"/>
@@ -210,6 +216,22 @@
 				<mibObj oid=".1.3.6.1.4.1.2021.10.1.5" instance="2" alias="loadavg5" type="integer" /> 
 				<mibObj oid=".1.3.6.1.4.1.2021.10.1.5" instance="3" alias="loadavg15" type="integer" /> 
 			</group>
+			<group name="ucd-memory" ifType="ignore">
+				<mibObj oid=".1.3.6.1.4.1.2021.4.4" instance="0" alias="memAvailSwap" type="integer" /> 
+				<mibObj oid=".1.3.6.1.4.1.2021.4.6" instance="0" alias="memAvailReal" type="integer" /> 
+				<mibObj oid=".1.3.6.1.4.1.2021.4.11" instance="0" alias="memTotalFree" type="integer" /> 
+			</group>
+			<group name="ucd-sysstat" ifType="ignore">
+				<mibObj oid=".1.3.6.1.4.1.2021.11.3" instance="0" alias="SwapIn" type="integer" /> 
+				<mibObj oid=".1.3.6.1.4.1.2021.11.4" instance="0" alias="SwapOut" type="integer" /> 
+				<mibObj oid=".1.3.6.1.4.1.2021.11.7" instance="0" alias="SysInterrupts" type="integer" /> 
+				<mibObj oid=".1.3.6.1.4.1.2021.11.8" instance="0" alias="SysContext" type="integer" /> 
+				<mibObj oid=".1.3.6.1.4.1.2021.11.50" instance="0" alias="CpuRawUser" type="counter" /> 
+				<mibObj oid=".1.3.6.1.4.1.2021.11.52" instance="0" alias="CpuRawSystem" type="counter" /> 
+				<mibObj oid=".1.3.6.1.4.1.2021.11.55" instance="0" alias="CpuRawKernel" type="counter" /> 
+				<mibObj oid=".1.3.6.1.4.1.2021.11.57" instance="0" alias="IORawSent" type="counter" /> 
+				<mibObj oid=".1.3.6.1.4.1.2021.11.58" instance="0" alias="IORawReceived" type="counter" /> 
+			</group>
 			<group name = "windows-host" ifType = "ignore">
 				<mibObj oid=".1.3.6.1.2.1.25.3.3.1.2" instance="1" alias="cpuPercentBusy" type="integer" />
 				<!-- Drive information is from the hrStorage table. -->
@@ -254,6 +276,7 @@
 				<collect>
 					<includeGroup>mib2-interfaces</includeGroup>
 					<includeGroup>cisco-router</includeGroup>
+					<includeGroup>cisco-router-if-stats</includeGroup>
 				</collect>
 			</systemDef>
 
@@ -305,6 +328,8 @@
 					<includeGroup>mib2-host-resources-system</includeGroup> 
 					<includeGroup>mib2-host-resources-memory</includeGroup> 
 					<includeGroup>ucd-loadavg</includeGroup> 
+					<includeGroup>ucd-memory</includeGroup> 
+					<includeGroup>ucd-sysstat</includeGroup> 
 				</collect>
 			</systemDef>
 
@@ -316,6 +341,8 @@
 					<includeGroup>mib2-host-resources-system</includeGroup> 
 					<includeGroup>mib2-host-resources-memory</includeGroup> 
 					<includeGroup>ucd-loadavg</includeGroup> 
+					<includeGroup>ucd-memory</includeGroup> 
+					<includeGroup>ucd-sysstat</includeGroup> 
 				</collect>
 			</systemDef>
 			
