@@ -38,11 +38,12 @@ reports=traffic, octets, errors, discards, avgbusy5, freemem, \
   extreme.currentTemp, \
   hpux.cpu, hpux.memory, hpux.swap, hpux.numUsers, hpux.numProcs, hpux.numFsMounted, \
   sun.swap, sun.procs, \
-  loadavg, cisco.protoin, cisco.protoout,  \
+  loadavg, cisco.protoin, cisco.protoout, cisco.pkts, cisco.temp, \
   cisco.buffhits, cisco.buffmiss, apc.temp,\
   apc.vac, apc.percent, apc.time, \
   ups.Freq, ups.Volt, ups.Amp, ups.Watt, \
-  juniper.cpu, juniper.temp, juniper.bufferPoolUtil
+  juniper.cpu, juniper.temp, juniper.bufferPoolUtil, \
+  hrMemory, hrNumUsers, hrSystemProcesses, hrSystemUptime
 
 # values available to prefab reports:
 # {rrd1}, {rrd2}, {rrd3}, ...  must match the datasources exactly
@@ -606,6 +607,39 @@ report.cisco.protoout.command=--title="Protocol Dist. Out" \
  GPRINT:bridgePct:MIN:"Min  \\: %8.2lf %s" \
  GPRINT:bridgePct:MAX:"Max  \\: %8.2lf %s\\n"
 
+
+report.cisco.pkts.name=Cisco Packets In/Out
+report.cisco.pkts.columns=locIfInPktsSec, locIfOutPktsSec
+report.cisco.pkts.type=interface
+report.cisco.pkts.command=--title="Cisco Packets In/Out" \
+ DEF:pktsIn={rrd1}:locIfInPktsSec:AVERAGE \
+ DEF:pktsOut={rrd2}:locIfOutPktsSec:AVERAGE \
+ LINE2:pktsIn#0000ff:"Packets In" \
+ GPRINT:pktsIn:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:pktsIn:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:pktsIn:MAX:"Max  \\: %8.2lf %s\\n" \
+ LINE2:pktsOut#ff0000:"Packets Out" \
+ GPRINT:pktsOut:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:pktsOut:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:pktsOut:MAX:"Max  \\: %8.2lf %s\\n"
+
+
+report.cisco.temp.name=Cisco Fan Temperature In/Out
+report.cisco.temp.columns=ciscoInFanTemp, ciscoOutFanTemp
+report.cisco.temp.type=node
+report.cisco.temp.command=--title="Cisco Fan Temperature In/Out" \
+ DEF:tempIn={rrd1}:ciscoInFanTemp:AVERAGE \
+ DEF:tempOut={rrd2}:ciscoOutFanTemp:AVERAGE \
+ LINE2:tempIn#0000ff:"Fan Temp In" \
+ GPRINT:tempIn:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:tempIn:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:tempIn:MAX:"Max  \\: %8.2lf %s\\n" \
+ LINE2:tempOut#ff0000:"Fan Temp Out" \
+ GPRINT:tempOut:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:tempOut:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:tempOut:MAX:"Max  \\: %8.2lf %s\\n"
+
+
 report.cisco.buffhits.name=Buffer Hits Percentages (Cisco)
 report.cisco.buffhits.columns=bufferSmHit, bufferMdHit, bufferBgHit, bufferLgHit, bufferHgHit
 report.cisco.buffhits.type=node
@@ -1017,6 +1051,55 @@ GPRINT:val2:AVERAGE:" Avg  \\: %8.2lf %s" \
 GPRINT:val2:MIN:"Min  \\: %8.2lf %s" \
 GPRINT:val2:MAX:"Max  \\: %8.2lf %s\\n"
 
+############################
+##     Net-SNMP Reports   ##
+############################
+
+
+report.hrMemory.name=Total Memory (Net-SNMP)
+report.hrMemory.columns=hrMemorySize
+report.hrMemory.type=node
+report.hrMemory.command=--title="Total Memory" \
+ --units-exponent 0 \
+ DEF:hrMemorySize={rrd1}:hrMemorySize:AVERAGE \
+ CDEF:sizeMB=hrMemorySize,1024,/ \
+ LINE2:sizeMB#0000ff:"Memory (MBytes)" \
+ GPRINT:sizeMB:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:sizeMB:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:sizeMB:MAX:"Max  \\: %8.2lf %s\\n"
+
+
+report.hrNumUsers.name=Number of Users (Net-SNMP)
+report.hrNumUsers.columns=hrSystemNumUsers
+report.hrNumUsers.type=node
+report.hrNumUsers.command=--title="Number of Users" \
+ DEF:hrSystemNumUsers={rrd1}:hrSystemNumUsers:AVERAGE \
+ LINE2:hrSystemNumUsers#0000ff:"Number of Users" \
+ GPRINT:hrSystemNumUsers:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:hrSystemNumUsers:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:hrSystemNumUsers:MAX:"Max  \\: %8.2lf %s\\n"
+
+
+report.hrSystemProcesses.name=Number of Processes (Net-SNMP)
+report.hrSystemProcesses.columns=hrSystemProcesses
+report.hrSystemProcesses.type=node
+report.hrSystemProcesses.command=--title="Number of Processes" \
+ DEF:SystemProcesses={rrd1}:hrSystemProcesses:AVERAGE \
+ LINE2:SystemProcesses#0000ff:"Number of Processes" \
+ GPRINT:SystemProcesses:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:SystemProcesses:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:SystemProcesses:MAX:"Max  \\: %8.2lf %s\\n"
+
+
+report.hrSystemUptime.name=System Uptime (Net-SNMP)
+report.hrSystemUptime.columns=hrSystemUptime
+report.hrSystemUptime.type=node
+report.hrSystemUptime.command=--title="System Uptime" \
+ DEF:time={rrd1}:hrSystemUptime:AVERAGE \
+ LINE2:time#0000ff:"System Uptime" \
+ GPRINT:time:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:time:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:time:MAX:"Max  \\: %8.2lf %s\\n"
 
 ###### Testing reports, ignored when delivered ###### 
  
